Added basic mobile styles

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=400,initial-scale=0.75" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Enoten urnik za študente IŠRM"
-    />
+    <meta name="description" content="Enoten urnik za študente IŠRM" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
